# gdocs-skill

./: .gitignore  README.md  pyproject.toml
docs/: prd.md  rfc.md  skill_google_docs.md  working.md
gdocs/: __main__.py  client.py  markdown.py
src/: auth.py  client.py
tests/integration/: test_integration.py
tests/unit/: test_auth.py  test_cli.py  test_client.py  test_markdown.py
